force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/giic_SourcingGroupRuleConversion__mdt.object-meta.xml
<CustomObject>
    <label>Sourcing Group Rule Conversion</label>
    <pluralLabel>Sourcing Group Rule Conversions</pluralLabel>
</CustomObject>