force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_FromWarehouse__c.field-meta.xml
<CustomField>
    <fullName>giic_FromWarehouse__c</fullName>
    <label>From Warehouse</label>
    <length>60</length>
    <type>Text</type>
</CustomField>