force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_InTransitLeadTime__c.field-meta.xml
<CustomField>
    <fullName>giic_InTransitLeadTime__c</fullName>
    <label>In Transit Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>