force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_ModeofTransport__c.field-meta.xml
<CustomField>
    <fullName>giic_ModeofTransport__c</fullName>
    <label>Mode of Transport</label>
    <length>40</length>
    <type>Text</type>
</CustomField>