force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_Share__c.field-meta.xml
<CustomField>
    <fullName>giic_Share__c</fullName>
    <label>Share %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>