force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_SourcingSequence__c.field-meta.xml
<CustomField>
    <fullName>giic_SourcingSequence__c</fullName>
    <label>Sourcing Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>