force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_SourcingType__c.field-meta.xml
<CustomField>
    <fullName>giic_SourcingType__c</fullName>
    <label>Sourcing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer From</fullName>
                <default>true</default>
                <label>Transfer From</label>
            </value>
            <value>
                <fullName>Purchase From</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>