force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_Supplier__c.field-meta.xml
<CustomField>
    <fullName>giic_Supplier__c</fullName>
    <label>Supplier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>