force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_SupplierLocation__c.field-meta.xml
<CustomField>
    <fullName>giic_SupplierLocation__c</fullName>
    <label>Supplier Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>