force-app/main/default/objects/giic_SourcingGroupRuleConversion__mdt/fields/giic_TransferToWarehouse__c.field-meta.xml
<CustomField>
    <fullName>giic_TransferToWarehouse__c</fullName>
    <label>Transfer To Warehouse</label>
    <length>60</length>
    <type>Text</type>
</CustomField>